Closed Bug 629000 Opened 15 years ago Closed 15 years ago

the text leaf accessible bound to the tree shouldn't be checked for relations

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b11

People

(Reporter: surkov, Assigned: surkov)

References

Details

(Keywords: access, perf)

Attachments

(1 file)

Attached patch patchSplinter Review
this makes us a little bit faster when accessible tree is created
Attachment #507123 - Flags: review?(bolterbugz)
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #507123 - Flags: approval2.0?
Attachment #507123 - Flags: review?(bolterbugz)
Attachment #507123 - Flags: review+
Attachment #507123 - Flags: approval2.0?
Attachment #507123 - Flags: approval2.0+
Summary: the text leaf accessible bounding to the tree shouldn't be checked for relations → the text leaf accessible bound to the tree shouldn't be checked for relations
Blocks: a11yperf_fx4
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b11
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: