Bug 629000 - the text leaf accessible bound to the tree shouldn't be checked for relations, r=davidb, a=davidb